--- a/APITaxi/templates/documentation/reference.html
+++ b/APITaxi/templates/documentation/reference.html
@@ -268,7 +268,7 @@ Taxi drivers in France have to be registered. They hold a professional licence i
         <td>department object</td>
         <td><em>The departement object is constituted of the identifier <code>numero</code> and the name <code>nom</code> of the local authority.<br>
                 For France the list of possible départements is available in the <a href="http://www.insee.fr/fr/methodes/nomenclatures/cog/telechargement/2015/txt/depts2015.txt" target="_blank">Code Officiel Géographique</a> (columns DEP for the identifier and NCCENR for the name)<br>
-                Warning: the identifier <code>numero</code> might contain some non-digits characters (<code>2A</code> or <code>2B</code> for Corsica for instance)
+                Warning: the identifier <code>numero</code> might contain some non-digits characters (<code>2A</code> or <code>2B</code> for Corsica for instance)<br>
                 When a new driver is created by an Operator, an empty string or <code>null</code> can be passed instead of the name <code>nom</code>: only the identifier <code>numero</code> is used by the <abbr name="Taxi Exchange Point">TXP</abbr>.</em></td>
     </tr>
     <tr>
